--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -17,7 +17,9 @@ summary(movie)
 head(movie)
 ```
 
-This data set that came from IMDb, includes data about the 1,000 most popular movies that came out from 2006 - 2016. Useful variables include Title, Director, Year, Runtime, Rating, Metascore, & Revenue. There are some dirtier variables like Description, Actors, & Genre that contain lengthy character strings that will need to be parsed and cleaned or simply omitted from the data we use.  
+This data set that came from IMDb, includes data about the 1,000 most popular movies that came out from 2006 - 2016. Useful variables include Title, Director, Year, Runtime, Rating, Metascore, & Revenue. There are some dirtier variables like Description, Actors, & Genre that contain lengthy character strings that will need to be parsed and cleaned or simply omitted from the data we use.
+
+IMDb, which stands for Internet Movie Database, is an online source for data associated with films, TV shows, video games, and other streamable content. For each title, users can find information relating to the starring cast, producers, and plot summaries, as well as both critic and fan reviews. As of May 2019, IMDb had 83 million registered users and approximately 6 million titles, including 516,726 feature films. IMDb ratings are based on user ratings on a scale from 1 to 10. The raw ratings are then filtered and weighted, creating a weighted mean rating for each film. The formula for calculating the weighted rating is $W = \frac{R*v + C*m}{v+m}$, where $R$ is the raw average, $v$ is the number of votes, $m$ is the minimum votes required to be included in the Top 250 (which is currently 25,000), and $C$ is the mean vote for the reports (which is currently 7.0).
 
 For analysis, we will be able to examine a variety of questions. First we plan to find which actors and directors are most commonly involved with successful movies. We can define success by looking at a movie's rating or its revenue. We will have to use the separate function to extract the 'Actors' column into multiple columns, i.e., 'Actor1', 'Actor2', etc. From there we can find the average movie rating and revenue on an actor specific basis.
 
