--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -22,3 +22,13 @@ This data set that came from IMDb, includes data about the 1,000 most popular mo
 For analysis, we will be able to examine a variety of questions. First we plan to find which actors and directors are most commonly involved with successful movies. We can define success by looking at a movie's rating or its revenue. We will have to use the separate function to extract the 'Actors' column into multiple columns, i.e., 'Actor1', 'Actor2', etc. From there we can find the average movie rating and revenue on an actor specific basis.
 
 We will also dive into what factors are correlated with a higher rating/revenue. We will examine the genre, runtime, and votes variables to see if they have any significance in predicting rating and revenue. We will also explore the possibility of merging multiple datasets to add in a column stating a movie's budget. This variable could also help explain a movie's rating/revenue so we would like to explore that too. 
+
+####Cleaning the Data
+
+Here we have separated the "Actors" column into four different columns: Actor1, Actor2, Actor3, and Actor4. We did this so that we can analyze individual actors. We also dropped the Rank and Description columns as we will not use them in our analysis. Next we changed the variable names for Runtime and Revenue so that they did not include the units (minutes and millions) in the name.
+
+```{r}
+movie = movie %>% separate("Actors", sep = ", ", into = c("Actor1", "Actor2", "Actor3", "Actor4"))
+movie = movie %>% select(-Rank, -Description)
+names(movie)[c(9,12)] = c("Runtime", "Revenue")
+```
