--- a/report.Rmd
+++ b/report.Rmd
@@ -58,7 +58,19 @@ We also plan to examine relationships between different factors in a movie over 
 Here we have separated the "Actors" column into four different columns: Actor1, Actor2, Actor3, and Actor4. We did this so that we can analyze individual actors. We also dropped the Rank and Description columns as we will not use them in our analysis. Next we changed the variable names for Runtime and Revenue so that they did not include the units (minutes and millions) in the name.
 
 ```{r}
-movie = movie %>% separate("Actors", sep = ", ", into = c("Actor1", "Actor2", "Actor3", "Actor4"))
+library(tidyr)
+library(dplyr)
+
+movie = movie %>% separate("Actors", sep = ",", into = c("Actor1", "Actor2", "Actor3", "Actor4"))
 movie = movie %>% select(-Rank, -Description)
 names(movie)[c(9,12)] = c("Runtime", "Revenue")
+
+
+movie = separate_rows(movie, Genre, sep = ",")
+
+movie = movie %>%
+  mutate(yesno = 1) %>%
+  distinct %>%
+  spread(Genre, yesno, fill = 0)
+
 ```
